Fix video overflow bug

--- a/app/assets/stylesheets/page/_candidates.scss
+++ b/app/assets/stylesheets/page/_candidates.scss
@@ -115,6 +115,7 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		text-align: center;
+		position: relative;
 
 		.overlay
 		{
